fix: remove global styles to hide overflown content on all elements

--- a/casparcg.css
+++ b/casparcg.css
@@ -1,8 +1,4 @@
 * {
-	margin: 0;
-	padding: 0;
-	white-space: nowrap;
-	overflow: hidden;
 	text-rendering: geometricPrecision;
     font-kerning: normal;
 }
